# human-friendly-ids-rs-demo

./: .example.env  .gitignore  .pre-commit-config.yaml  Caddyfile  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  docker-compose.yaml  eslint.config.mjs  justfile  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: actionlint.yaml  ci.yaml  toml.yaml
src/: main.rs
static/: 401.html  index.html  presenter.css  presenter.html  presenter.js
static/media/: 1.txt  10.txt  2.txt  3.txt  5.txt  6.txt  7.txt  8.txt
